--- a/biome.json
+++ b/biome.json
@@ -19,6 +19,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "correctness": {
+        "useExhaustiveDependencies": "off"
+      },
       "a11y": {
         "useButtonType": "off",
         "useKeyWithClickEvents": "off",
@@ -31,7 +34,8 @@
       },
       "suspicious": {
         "noUnknownAtRules": "off",
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noArrayIndexKey": "off"
       },
       "style": {
         "noNonNullAssertion": "off"
