--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@utils/*": ["./src/utils/*"],
       "@utils": ["./src/utils/index.ts"],
       "@store/*": ["./src/store/*"],
-      "@store": ["./src/store/index.ts"]
+      "@store": ["./src/store/index.ts"],
+      "@context/*": ["./src/context/*"],
+      "@context": ["./src/context/index.ts"]
     }
   },
   "include": [
