feat: add editable components for project management; implement EditableText and EditableTooltip, update ProjectViewEditable, and enhance styling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
       "@store/*": ["./src/store/*"],
       "@store": ["./src/store/index.ts"],
       "@context/*": ["./src/context/*"],
-      "@context": ["./src/context/index.ts"]
+      "@context": ["./src/context/index.ts"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@hooks": ["./src/hooks/index.ts"]
     }
   },
   "include": [
